# llm-inference-rag

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/eval/: retrieval_gold.json
data/sample/: continuous-batching.md  kv-cache.md  paged-attention.md  quantization.md  speculative-decoding.md  tensor-parallelism.md
docs/: architecture.md  blog.md  decisions.md  experiments.md  roadmap.md
scripts/: deploy_render.sh  provision_qdrant.sh  run_ragas_sample.py  seed_arxiv_db.py  verify_prod.py
src/: pipeline.py
src/api/: main.py
src/config/: settings.py
src/evaluation/: benchmarks.py  metrics.py  ragas_eval.py  retrieval_eval.py  tracking.py
src/frontend/: app.py  style.css
src/generation/: agent.py  dispatch.py  llm.py  rag.py
src/ingestion/: arxiv.py  hf_datasets.py  loader.py
src/retrieval/: embeddings.py  engine.py  reranker.py
src/skills/: critical_analysis.md
tests/: conftest.py  test_agent.py  test_api.py  test_benchmarks.py  test_config.py  test_dispatch.py  test_evaluation.py  test_generation.py  test_hf_datasets.py  test_ingestion.py  test_persistence.py  test_pipeline.py  test_reranker.py  test_retrieval.py
tests/evaluation/: test_ragas.py  test_wandb.py
tests/ingestion/: test_arxiv.py
