[project]
name = "rag-portfolio"
version = "0.1.0"
description = "Production-grade RAG over an LLM inference-optimization corpus"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-qdrant>=0.2",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-ollama>=0.2",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.12",
    "pypdf>=5.0",
    "datasets>=3.0",
    "fastembed>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.0",
]

# This is an application, not a distributable library: no build backend needed.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]       # tests don't need docstrings
"src/**/__init__.py" = ["D104"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Test-only: starlette's TestClient nudges toward an unproven `httpx2`.
    # We keep the standard `httpx`; silence the third-party noise.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
